Increase denial counter expiry to 90 days and accept map of denied apps
To reduce the number of times a user would see already denied permissions. Now that denial counter operates per
(calling app, matching app, data category) level, we can be more strict about the time limit.

Bug: 450875408
Test: atest
Flag: com.android.healthfitness.flags.matchmaking
Change-Id: Ia5855c2f1210a98179741ea21102555b48a0c73c